mp4/grade_report.txt
Grading r30681 by zzhan145 committed on Tue Oct 11 18:34:58 CDT 2016
Monad Autograder
Testing mp4 at 2016-10-12 02:20:51

"If you just rely on one model, you tend to amputate reality to make it fit your model." ~ David Brooks

Setting up test environment...
Compiling...
================================================================
In file included from unit_tests.cpp:15:
In file included from ./filler.h:264:
./filler.cpp:20:1: error: expected expression
}
^
1 error generated.
In file included from unit_tests.cpp:15:
In file included from ./filler.h:264:
./filler.cpp:20:1: error: expected expression
}
^
1 error generated.
ld: no input files
In file included from unit_tests.cpp:15:
In file included from ./filler.h:264:
./filler.cpp:20:1: error: expected expression
}
^
1 error generated.
In file included from unit_tests.cpp:15:
In file included from ./filler.h:264:
./filler.cpp:20:1: error: expected expression
}
^
1 error generated.
ld: no input files
clang-3.5: error: no such file or directory: 'unit_tests.o'
make: *** [proxy] Error 1
make: *** Waiting for unfinished jobs....


Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

